--- a/css/main.scss
+++ b/css/main.scss
@@ -8,12 +8,13 @@
 @import './blocks/logo';
 @import './blocks/navbar';
 @import './blocks/phone';
-@import './blocks/page-title';
+@import './blocks/hero-title';
 @import './blocks/btn';
 @import './blocks/main-pics';
 @import './blocks/sidebar';
-
-
 @import './blocks/advantages';
 
 
+//why section
+@import './blocks/why-section';
+@import './blocks/why-pics';
