--- a/css/main.css
+++ b/css/main.css
@@ -35,12 +35,12 @@
   filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(248deg) brightness(106%) contrast(106%);
 }
 
-.page-title {
+.hero-title {
   width: 353px;
   margin-bottom: 64px;
 }
 
-.page-title__title {
+.hero-title__title {
   margin: 0 0 17px 0;
   font-size: 48px;
   line-height: 58px;
@@ -48,7 +48,7 @@
   font-weight: 700;
 }
 
-.page-title__subtitle {
+.hero-title__subtitle {
   font-size: 21px;
   line-height: 25px;
   font-weight: 300;
@@ -149,6 +149,85 @@
 
 .advantages__text {
   width: 70px;
+}
+
+.why {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.why__title {
+  display: inline-block;
+  color: #292929;
+  font-size: 48px;
+  font-weight: 700;
+  text-transform: uppercase;
+  padding-top: 100px;
+  margin-bottom: 20px;
+}
+
+.why__list {
+  display: flex;
+  margin-bottom: 114px;
+}
+
+.why__item {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.why__subtitle {
+  display: inline-block;
+  width: 436px;
+  color: #666666;
+  font-size: 18px;
+  line-height: 22px;
+  text-align: center;
+  margin-bottom: 50px;
+}
+
+.why__item-pic {
+  display: inline-block;
+  width: 70px;
+  height: 70px;
+}
+
+.why__item-icon {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: #F2F5F4;
+  width: 128px;
+  height: 128px;
+  border-radius: 50%;
+  margin-bottom: 20px;
+}
+
+.why__item-text {
+  color: #666666;
+  text-align: center;
+  font-weight: 300;
+}
+
+.why__item-title {
+  color: #292929;
+  font-size: 27px;
+  font-weight: 700;
+  margin-bottom: 18px;
+}
+
+.leaf-4 {
+  position: absolute;
+  top: 172px;
+  left: 0;
+}
+
+.raspberry {
+  position: absolute;
+  left: 0;
+  bottom: -107px;
 }
 
 /*# sourceMappingURL=main.css.map */
