--- a/css/blocks/advantages.scss
+++ b/css/blocks/advantages.scss
@@ -1,5 +1,5 @@
 .advantages {
-  margin-bottom: 50px;
+
 }
 .advantages__icon {
   display: block;
@@ -21,5 +21,5 @@
   align-items: center;
 }
 .advantages__text {
-  width: 70px;
+  max-width: 70px;
 }
