--- a/css/layout/base.css
+++ b/css/layout/base.css
@@ -5,40 +5,42 @@ body {
     /*background-color: #001821;*/
     color: #ffffff;
     font-family: 'AlegreyaSans', Helvetica, sans-serif;
-    /*line-height: 1.42;*/
-    /*font-size: 16px;*/
+    line-height: 1.42;
+    font-size: 18px;
     -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;   
+    -moz-osx-font-smoothing: grayscale;
+    /*position: relative;*/
 }
 a {
     color: #ffffff;
 }
 
 .wrapper {
-
+    width: 100%;
     overflow: hidden;
-    min-width: 1200px;
+    min-width: 960px;
     min-height: 100%;
-    display: flex;
-    flex-direction: column;
+    /*display: flex;*/
+    /*flex-direction: column;*/
+    position: relative;
 }
 
 
 
-.wrapper__content {
-    flex: 1;
-}
+/*.wrapper__content {*/
+/*    flex: 1;*/
+/*}*/
 
 .container {
     width: 940px;
     margin: 0 auto;
     
 }
-.hero {
-    background: #61C4D9;
-    position: relative;
 
-}
 .why-section {
     position: relative;
+}
+.order-section {
+    position: relative;
+    background: #F8FAF9;
 }
