--- a/css/main.css
+++ b/css/main.css
@@ -2,11 +2,39 @@
 @import './layout/base.css';
 @import './layout/reset_styles.css';
 @import './layout/normolize.css';
+.hero {
+  background: url("../../img/icons/main-page/tracery.png") right bottom no-repeat;
+  background-color: #61C4D9;
+  position: relative;
+  height: 100vh;
+  min-height: 650px;
+  position: relative;
+}
+.hero:before {
+  position: absolute;
+  content: url("../../img/icons/main-page/leaf1.png");
+  bottom: -40px;
+  left: 2%;
+}
+.hero:after {
+  content: url("../../img/icons/main-page/leaf2.png");
+  bottom: -40px;
+  right: 0;
+}
+
+.hero__container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
+  padding: 24px 0 50px 0;
+  background: url("../../img/icons/main-page/bars.png") right center/50% auto no-repeat;
+}
+
 .header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  height: 80px;
   margin-bottom: 80px;
 }
 
@@ -27,6 +55,9 @@
 .phone {
   display: flex;
   align-items: center;
+}
+.phone__number {
+  font-size: 22px;
 }
 .phone__icon {
   margin-right: 6px;
@@ -59,10 +90,17 @@
   display: inline-block;
   padding: 20px 40px;
   border-radius: 100px;
-  background: #fff;
-  color: #365A49;
   text-transform: uppercase;
   font-weight: 700;
+}
+
+.hero-title__btn {
+  background: #fff;
+  color: #365A49;
+}
+.hero-title__btn:hover {
+  background: #365A49;
+  color: #fff;
 }
 
 .leaf {
@@ -120,10 +158,6 @@
   border-radius: 50%;
   background: #fff;
 }
-.advantages {
-  margin-bottom: 50px;
-}
-
 .advantages__icon {
   display: block;
   width: 100%;
@@ -148,7 +182,7 @@
 }
 
 .advantages__text {
-  width: 70px;
+  max-width: 70px;
 }
 
 .why {
@@ -225,9 +259,45 @@
 }
 
 .raspberry {
+  z-index: 10;
   position: absolute;
   left: 0;
   bottom: -107px;
+}
+
+.order {
+  display: flex;
+}
+
+.order__img-wrapper {
+  display: inline-block;
+  width: 363px;
+  height: 386px;
+  position: relative;
+  border: 1px dashed red;
+}
+
+.order__img {
+  position: absolute;
+  left: 0;
+  top: 0;
+}
+
+.order__dropdown {
+  width: 90px;
+  height: 90px;
+  background: #86C3D7;
+}
+
+.order__title {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 43px;
+  color: #292929;
+}
+
+.order__text {
+  color: #666666;
 }
 
 /*# sourceMappingURL=main.css.map */
