--- a/css/blocks/hero.scss
+++ b/css/blocks/hero.scss
@@ -1,5 +1,5 @@
 .hero {
-  background: url("../../img/icons/main-page/tracery.png") right bottom no-repeat;
+  background: url("../img/icons/main-page/tracery.png") right bottom no-repeat;
   background-color: #61C4D9;
   position: relative;
   height: 100vh;
@@ -8,12 +8,13 @@
 
   &:before {
     position: absolute;
-    content: url("../../img/icons/main-page/leaf1.png");
+    content: url("../img/icons/main-page/leaf3.png");
     bottom: -40px;
     left: 2%;
   }
   &:after {
-    content: url("../../img/icons/main-page/leaf2.png");
+    position: absolute;
+    content: url("../img/icons/main-page/berries.png");
     bottom: -40px;
     right: 0;
   }
@@ -26,5 +27,5 @@
   justify-content: space-between;
   height: 100%;
   padding: 24px 0 50px 0;
-  background: url("../../img/icons/main-page/bars.png") right center / 50% auto no-repeat;
+  background: url("../img/icons/main-page/bars.png") right center / 50% auto no-repeat;
 }
