--- a/css/main.css
+++ b/css/main.css
@@ -208,6 +208,10 @@
   color: #000;
 }
 
+.section--font-color--green {
+  color: #1f5c14;
+}
+
 .benefits-section {
   position: relative;
   background: url("../img/icons/why-page/leaf4.png") left top 57% no-repeat;
@@ -423,6 +427,105 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
+}
+
+.order-section {
+  background: url("../img/icons/order-page/blackberry.png") bottom 14% left 2% no-repeat, url("../img/icons/order-page/leaf.png") right 1% bottom 16% no-repeat, url("../img/icons/order-page/order-bg.jpg") center center/cover no-repeat;
+  font-size: 18px;
+}
+
+.radio {
+  display: flex;
+  cursor: pointer;
+  user-select: none;
+  align-items: center;
+  margin-right: 22px;
+}
+.radio--checkbox .radio__visible {
+  border-radius: 0;
+}
+.radio--checkbox .radio__visible:before {
+  background: url("../img/icons/tick.png") center center no-repeat;
+}
+
+.radio__elem {
+  display: none;
+}
+.radio__elem:checked ~ .radio__visible::before {
+  display: block;
+}
+
+.radio__visible {
+  width: 26px;
+  height: 26px;
+  position: relative;
+  border-radius: 50%;
+  background: #fff;
+  margin-right: 10px;
+}
+.radio__visible:before {
+  content: "";
+  width: 14px;
+  height: 14px;
+  background: #365a49;
+  border-radius: 50%;
+  position: absolute;
+  display: none;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.form__controls {
+  margin-bottom: 8px;
+}
+
+.form__btns {
+  margin-top: 40px;
+}
+
+.form {
+  display: flex;
+}
+
+.form__col {
+  flex: 1;
+  margin-right: 20px;
+}
+.form__col:last-child {
+  margin-right: 0;
+}
+
+.form__row {
+  display: flex;
+  margin-bottom: 18px;
+}
+
+.form__block {
+  flex: 1;
+  margin-right: 20px;
+}
+.form__block:last-child {
+  margin-right: 0;
+}
+
+.form__input {
+  width: 100%;
+  padding: 16px 11px;
+  border: solid 3px transparent;
+}
+.form__input--textarea {
+  height: 180px;
+  resize: none;
+}
+.form__input:focus {
+  border-color: #dee2bd;
+  outline: none;
+}
+
+.form__controls {
+  display: flex;
+  flex-wrap: wrap;
 }
 
 /*# sourceMappingURL=main.css.map */
