--- a/css/main.scss
+++ b/css/main.scss
@@ -8,7 +8,7 @@
 @import './blocks/header';
 @import './blocks/logo';
 @import './blocks/navbar';
-@import './blocks/phone';
+@import './blocks/phone-number';
 @import './blocks/hero-title';
 @import './blocks/btn';
 @import './blocks/main-pics';
@@ -33,3 +33,10 @@
 @import './blocks/order-section';
 @import './blocks/radio';
 @import './blocks/form';
+
+//map section
+@import './blocks/contacts';
+@import './blocks/map-section';
+@import './blocks/phone-number';
+@import './blocks/socials';
+@import './blocks/footer';
