--- a/css/blocks/radio.scss
+++ b/css/blocks/radio.scss
@@ -10,7 +10,7 @@
       border-radius: 0;
 
       &:before {
-        background: url("../img/icons/tick.png") center center no-repeat;
+        background: url("../img/icons/order-page/check.png") center center no-repeat;
       }
     }
   }
