--- a/css/blocks/hero-title.scss
+++ b/css/blocks/hero-title.scss
@@ -1,5 +1,5 @@
 .hero-title {
-  width: 353px;
+  width: 46%;
   margin-bottom: 64px;
 
 }
@@ -15,4 +15,5 @@
   line-height: 25px;
   font-weight: 300;
   margin-bottom: 32px;
+  padding-right: 15%;
 }
