--- a/css/main.scss
+++ b/css/main.scss
@@ -11,8 +11,7 @@
 @import './blocks/phone-number';
 @import './blocks/hero-title';
 @import './blocks/btn';
-@import './blocks/main-pics';
-@import './blocks/sidebar';
+@import './blocks/fixed-menu';
 @import './blocks/advantages';
 
 
