--- a/css/blocks/order-section.scss
+++ b/css/blocks/order-section.scss
@@ -2,5 +2,5 @@
   background: url("../img/icons/order-page/blackberry.png") bottom 14% left 2% no-repeat,
   url("../img/icons/order-page/leaf.png") right 1% bottom 16% no-repeat,
   url("../img/icons/order-page/order-bg.jpg") center center/cover no-repeat;
-  font-size: 18px;
+  font-size: rem(18px);
 }
