--- a/css/main.scss
+++ b/css/main.scss
@@ -1,5 +1,6 @@
 @import './layout/fonts.css';
-@import './layout/base.css';
+@import './media';
+@import 'layout/base';
 @import './layout/reset_styles.css';
 @import './layout/normolize.css';
 
