--- a/css/blocks/benefits.scss
+++ b/css/blocks/benefits.scss
@@ -10,7 +10,7 @@
   &:before {
     content: url("../img/icons/why-page/separator.png");
     position: absolute;
-    top: 30px;
+    top: rem(30px);
     right: 0;
     transform: translateX(50%);
   }
