--- a/css/blocks/form.scss
+++ b/css/blocks/form.scss
@@ -4,7 +4,7 @@
 
 .form__col {
   flex: 1;
-  margin-right: 20px;
+  margin-right: rem(20px);
 
   &:last-child {
     margin-right: 0;
@@ -13,12 +13,12 @@
 
 .form__row {
   display: flex;
-  margin-bottom: 18px;
+  margin-bottom: rem(18px);
 }
 
 .form__block {
   flex: 1;
-  margin-right: 20px;
+  margin-right: rem(20px);
 
   &:last-child {
     margin-right: 0;
@@ -27,11 +27,11 @@
 
 .form__input {
   width: 100%;
-  padding: 16px 11px;
-  border: solid 3px transparent;
+  padding: rem(16px) rem(11px);
+  border: solid rem(3px) transparent;
 
   &--textarea {
-    height: 180px;
+    height: rem(180px);
     resize: none;
   }
 
