--- a/css/blocks/headline.scss
+++ b/css/blocks/headline.scss
@@ -1,14 +1,14 @@
 .headline {
   text-align: center;
-  margin-bottom: 51px;
+  margin-bottom: rem(51px);
 }
 
 .headline__title {
-  margin-bottom: 7px;
+  margin-bottom: rem(7px);
 }
 
 .headline__subtitle {
   padding: 0 26%;
   color: #666666;
-  font-size: 18px;
+  font-size: rem(18px);
 }
