--- a/css/blocks/hero-title.scss
+++ b/css/blocks/hero-title.scss
@@ -1,19 +1,36 @@
 .hero-title {
   width: 46%;
-  margin-bottom: 64px;
+  margin-bottom: rem(64px);
+
+  @include tablets {
+    width: 100%;
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    &:before {
+      content: url("../img/icons/main-page/bars-full-pic.png");
+    }
+  }
 
 }
 .hero-title__title {
-  margin: 0 0 17px 0;
-  font-size: 48px;
-  line-height: 58px;
+  margin: 0 0 rem(17px) 0;
+  font-size: rem(48px);
+  line-height: rem(58px);
   text-transform: uppercase;
   font-weight: 700;
 }
 .hero-title__subtitle {
-  font-size: 21px;
-  line-height: 25px;
+  font-size: rem(21px);
+  line-height: rem(25px);
   font-weight: 300;
-  margin-bottom: 32px;
+  margin-bottom: rem(32px);
   padding-right: 15%;
+
+  @include tablets {
+    padding: 0 25%;
+  }
 }
