--- a/css/blocks/socials.scss
+++ b/css/blocks/socials.scss
@@ -3,7 +3,7 @@
 }
 
 .socials__item {
-  margin-right: 20px;
+  margin-right: rem(20px);
 
   &:last-child {
     margin-right: 0;
@@ -21,8 +21,8 @@
 }
 
 .socials__icon {
-  width: 20px;
-  height: 20px;
+  width: rem(20px);
+  height: rem(20px);
   fill: #000;
   opacity: .3;
 }
