--- a/css/blocks/header.scss
+++ b/css/blocks/header.scss
@@ -1,7 +1,6 @@
 .header {
   display: flex;
   justify-content: space-between;
-  align-items: center;
-
+  align-items: flex-start;
   margin-bottom: rem(80px);
 }
