--- a/css/blocks/reviews.scss
+++ b/css/blocks/reviews.scss
@@ -21,11 +21,22 @@
 
 .reviews__display-inner {
   display: flex;
+  @include tablets {
+    flex-direction: column;
+    align-items: center;
+
+    text-align: center;
+  }
 }
 
 .reviews__avatar {
   width: rem(254px);
   height: rem(260px);
+  @include tablets {
+    width: rem(130px);
+    height: rem(130px);
+    margin-bottom: rem(30px);
+  }
 }
 
 .reviews__avatar-img {
@@ -39,6 +50,10 @@
   margin-left: rem(17px);
   padding-right: 10%;
   padding-top: rem(8px);
+  @include tablets {
+    padding-right: 0;
+    margin-left: 0;
+  }
 }
 
 .reviews__title {
@@ -46,6 +61,9 @@
   font-weight: bold;
   margin-bottom: rem(22px);
   color: black;
+  @include tablets {
+    margin-bottom: rem(16px);
+  }
 }
 
 .reviews__text {
@@ -53,6 +71,9 @@
   p {
     color: #666666;
     font-size: rem(18px);
+  }
+  @include tablets {
+    margin-bottom: rem(16px);
   }
 }
 
