--- a/css/main.scss
+++ b/css/main.scss
@@ -14,6 +14,7 @@
 @import './blocks/btn';
 @import './blocks/fixed-menu';
 @import './blocks/advantages';
+@import './blocks/hamburger';
 
 
 //why section
